--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,3 @@
-VITE_BASEURL=https://new-ecommerce2.onrender.com
+VITE_BASEURL=http://localhost:3000
+
+VITE_API_PROD=https://new-ecommerce2.onrender.com
